<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Nextcloud - Android Client
  ~
  ~ SPDX-FileCopyrightText: 2020 Tobias Kaminsky <tobias@kaminsky.me>
  ~ SPDX-FileCopyrightText: 2020 Nextcloud GmbH
  ~ SPDX-License-Identifier: AGPL-3.0-or-later OR GPL-2.0-only
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="clip_horizontal"
    android:orientation="vertical"
    android:paddingStart="26dp"
    android:paddingEnd="@dimen/standard_padding"
    android:paddingBottom="@dimen/standard_padding">

    <TextView
        android:id="@+id/headline"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_which_file"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conflict_message_description" />

    <LinearLayout
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/leftFileContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/left_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conflict_local_file" />

            <ImageView
                android:id="@+id/left_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="@dimen/standard_half_margin"
                android:src="@drawable/file_image"
                android:contentDescription="@string/thumbnail_for_new_file_desc" />

            <TextView
                android:id="@+id/left_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/placeholder_date" />

            <TextView
                android:id="@+id/left_file_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/placeholder_fileSize_2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rightFileContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/right_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conflict_server_file" />

            <ImageView
                android:id="@+id/right_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="@dimen/standard_half_margin"
                android:src="@drawable/file_image"
                android:contentDescription="@string/thumbnail_for_existing_file_description" />

            <TextView
                android:id="@+id/right_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/placeholder_date_2" />

            <TextView
                android:id="@+id/right_file_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/placeholder_fileSize_3" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
