...
  ~
  ~ SPDX-FileCopyrightText: 2025 STRATO GmbH.
  ~ SPDX-License-Identifier: GPL-2.0
  -->

<resources>
    <string name="scanbot_cancel_btn_title">Cancel</string>
    <string name="scanbot_fail">An error occurred. Please try again later.</string>
    <string name="scanbot_hold_and_drag_to_rearrange_pages">Hold and drag to rearrange pages</string>
    <string name="scanbot_no_camera_permissions_granted">Need use camera permissions to be granted to scan code</string>
    <string name="scanbot_no_enough_free_device_space_title">No enough space</string>
    <string name="scanbot_no_free_space_message">"The smartphone does not have enough storage space available. "</string>
    <string name="scanbot_ok_btn_title">OK</string>
    <string name="scanbot_save">Save</string>
    <string name="scanbot_save_as">Save as</string>
    <string name="scanbot_unknown_exception">An error occurred. Please try again later</string>

    <string name="scanbot_camera_automatic_btn">Automatic</string>
    <string name="scanbot_camera_detection_result_error_nothing_detected">No Document</string>
...
